--- a/taintToleration/pod-toleration.yaml
+++ b/taintToleration/pod-toleration.yaml
@@ -1,3 +1,9 @@
+# Check if controlplane and node01 have any taints on them that will prevent the pods 
+# to be scheduled on them. If there are no taints, the pods can be scheduled on either node.
+# So run the following command to check the taints on both nodes.
+# root@controlplane:~# kubectl describe nodes controlplane | grep -i taints
+
+
 apiVersion: v1
 kind: Pod
 metadata:
