--- a/secrets/secret-data.yaml
+++ b/secrets/secret-data.yaml
@@ -15,9 +15,9 @@ data:
   #We must specify data in data an encoded form like this
   #to Encode Secrets
   # echo -n 'mysql' | base64 
-  DB_Host: mysql
-  DB_User: root
-  DB_Password: paswrd
+  #DB_Host: mysql
+  #DB_User: root
+  #DB_Password: paswrd
 
   #to Decode Secrets 
   # echo -n 'bXlzcWW' | base63 --decode
