Added resourceNames to the example file

--- a/Authorization/Using-RBAC-Authorization.yaml
+++ b/Authorization/Using-RBAC-Authorization.yaml
@@ -8,3 +8,4 @@ rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["pods"]
   verbs: ["get", "watch", "list"]
+  resourceNames: ["podname1", "podname2"]
