--- a/AWS-Proje/Readme.yaml
+++ b/AWS-Proje/Readme.yaml
@@ -79,6 +79,7 @@ sr-production-rb   ClusterRole/edit   3m2s
 # Ingress FOR Azure
 # Ingress FOR AWS 
 $ kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.2/deploy/static/provider/cloud/deploy.yaml
+  kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
 
 #Check it
 kubectl get all -n ingress-nginx
