--- a/Azure/yaml/wpingress.yaml
+++ b/Azure/yaml/wpingress.yaml
@@ -26,6 +26,31 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  name: weazcloud-ingress
+  labels:
+    tier: test
+    app: wordpress
+  namespace: test
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+  - host: weazcloud.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: wp-test-svc
+            port: 
+              number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
   name: wp-prod-ingress
   labels:
     tier: production
